--- a/static/styles.css
+++ b/static/styles.css
@@ -1,41 +1,43 @@
-table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+.hero-icon{
+    object-fit: cover;
+    pointer-events: none;
+    border-radius: inherit;
+    position: absolute;
+    border: none;
+    margin: 0;
+    padding: 0;
+    font: inherit;
+    height: 100%;
+    width: 100%;
 }
 
-table thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
+.hero{
+    display: block;
+    width: 42px;
+    height: 60px;
+    cursor: pointer;
+    overflow: visible;
+    background: rgb(20, 20, 20);
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+    font-size: 11px;
+}
+.hero-section{
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    display: grid;
+    gap: 8px;
+    grid-template-columns: repeat(auto-fill, 42px);
 }
 
-table th,
-table td {
-    padding: 12px 15px;
+.ability{
+    width: 64px;
+    height: 64px;
 }
 
-table tbody tr {
-    border-bottom: 1px solid #dddddd;
+strong{
+    color: #585858
 }
-
-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
-
-table tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
-}
-
-img {
-    max-width:50;
-    max-height:50;
-  }
