--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/static/styles.css" />
         <title>{% block title %}{% endblock %} - dota.science</title>
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.11.3/datatables.min.css"/>
+        <!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.11.3/datatables.min.css"/>-->
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css"/>
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.11.3/datatables.min.js"></script>
         
@@ -43,6 +45,7 @@
                   <a class="nav-link {% block nav_home %}{% endblock %}" aria-current="page" href="/">Home</a>
                   <a class="nav-link {% block nav_aghs %}{% endblock %}" href="/aghs">Aghanim's Labyrinth</a>
                   <a class="nav-link {% block nav_about %}{% endblock %}" href="/about">About</a>
+                  <a class="nav-link {% block nav_contact %}{% endblock %}" href="/contact">Contact</a>
                 </div>
               </div>
             </div>
@@ -55,7 +58,7 @@
             </div>
         </main>
         <footer class="footer mt-auto py-3 bg-light">
-          <div class="container">Footer</div>
+          <div class="container"><a href="/contact" class="text-muted">Report a bug</a></div>
         </footer>
     </body>
 </html>
