--- a/templates/about.html
+++ b/templates/about.html
@@ -3,4 +3,4 @@
 
 {% block nav_about %}active{% endblock %}
 
-{% block body %}<img src=/static/mori.jpg class="d-flex justify-content-center">{% endblock %}
+{% block body %}<img src=/static/img/mori.jpg class="d-flex justify-content-center">{% endblock %}
