--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,4 +3,4 @@
 
 {% block nav_contact %}active{% endblock %}
 
-{% block body %}<img src=/static/mori_comp.jpg class="center">{% endblock %}
+{% block body %}<img src=/static/img/mori_comp.jpg class="center">{% endblock %}
